--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="entryleft" id="email">
             <label for="email"><strong>Email: </strong></label>
-            <div style="text-align: center; margin: auto;">nrgman@tds.net</div>
+            <div style="text-align: center; margin: auto;">nrgman&#64;tds.net</div>
         </div>
         <div class="entry" id="Discord">
             <label for="address"><strong>Discord: </strong></label>
