--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -47,8 +47,17 @@
         <div class="attributes" id="wrapper">
 
         </div>
-        <table mat-table class="skills">
-            
+        <table mat-table [dataSource]="dataSource" class="skills">
+            <ng-container matColumnDef="Skill">
+                <th mat-header-cell *matHeaderCellDef><strong>Skill</strong></th>
+                <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Years of Experience">
+                <th mat-header-cell *matHeaderCellDef><strong>Years of Experience</strong></th>
+                <td mat-cell *matCellDef="let element">{{element.exp}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
         <div class="skills">
             <div class="row" id="wrapper" style="border-top: 2px;">
