--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -1,6 +1,8 @@
 .cs {
     background-color: white;
     display: grid;
+    width: 98vw;
+    margin-top: 10px;
 }
 .row {
     background-color: white;
