--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<div class = "bod">
-    <app-navbar style = "width: 100vw;"></app-navbar>
-    <div style = "margin-top: 120px; background-color: grey; margin-left: 15px; margin-right: 15px;">
+<div style = "background-color: grey; width: 100vw;">
+    <div class = "head">
+        <app-navbar style = "width: 100vw;"></app-navbar>
+    </div>
+    <div class = "bod" style = "margin-top: 110px; background-color: grey; margin-left: 15px; margin-right: 15px;">
         <router-outlet></router-outlet>
     </div>
 </div>
