--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div style = "background-color: grey; width: 100vw;">
+<div style = "background-color: grey;">
     <div class = "head">
-        <app-navbar style = "width: 100vw;"></app-navbar>
+        <app-navbar></app-navbar>
     </div>
-    <div class = "bod" style = "margin-top: 110px; background-color: grey; margin-left: 15px; margin-right: 15px;">
-        <router-outlet></router-outlet>
+    <div class = "bod" style = "background-color: grey; margin-left: 15px;">
+        <div style = "margin-top: 110px;">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
