--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="entry" id="race">
             <label for="race"><strong>Race: </strong></label>
-            <div style="text-align: center; margin: auto;">White</div>
+            <div style="text-align: center; margin: auto;">Caucasian</div>
         </div>
         <div class="entryright" id="religion">
             <label for="religion"><strong>Religion: </strong></label>
@@ -73,6 +73,19 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div for="Equipment">
+            
+        </div>
+        <mat-grid-list cols = 2 for="Attributes" class = "attributes">
+           @for (attribute of attributes; track attribute)
+           {
+                <mat-grid-tile class = "attribute"><strong>{{attribute.name}}</strong></mat-grid-tile>
+                <mat-grid-tile class = "value">{{attribute.value}}</mat-grid-tile>
+           }
+        </mat-grid-list>
+        <div for="Education">
+            
         </div>
         <app-feats></app-feats>
     </div>
