--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,3 +1,3 @@
-<app-feats style = "border: 1px; border-color: black;
-    border-style: solid; max-width: 30vw; max-height: 40vh;
-    margin: auto; margin-left: 30px;"></app-feats>
+<div style = "margin: auto;">
+<label style = "font-size: large;"><strong>Strength</strong></label>
+</div>
