--- a/src/app/feats/feats.component.css
+++ b/src/app/feats/feats.component.css
@@ -2,6 +2,12 @@
 {
     display: none;
 }
+#feats
+{
+    display: inline;
+    list-style: none;
+    margin: none;
+}
 .feat:hover + .hide
 {
     display: block;
