--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -56,6 +56,7 @@
     display: grid;
     min-width: 20vw;
     float: right;
+    margin-top: 4px;
 }
 .skills .name {
     text-align: center;
@@ -122,6 +123,13 @@
     max-width: 40vw;
     margin: none;
     margin-left: 30vw;
+}
+.rightColumn {
+    min-width: 30vw;
+    max-width: 30vw;
+    margin: auto;
+    float: right;
+    display: block;
 }
 #wrapper {
     display: flex; 
