--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 nav {background-color:black;color:red; overflow: hidden; width: 100%; top: 0}
 h2 {color:green;}
-.head {color:red; position:fixed; overflow:hidden; display:inline-block; width:auto; z-index: 51;}
+.head {color:red; position:fixed; overflow:hidden; display:inline-block; width:auto; z-index: 51;
+	grid-row: 0;}
 .head .tabs {padding:8px 16px; float:right!important; width:auto; border:none; 
 	display:block; outline:0; color:red; white-space:nowrap}
 h1 {color:red; text-align:left;}
@@ -16,6 +17,7 @@ body {background-color:grey; text-align:left;
 	position: relative;
 	background-color: grey;
 	z-index: 5;
+	grid-row: 1;
 }
 .navbar {background-color:black;color:red; margin: 0; overflow: hidden; width: 100%; top: 0}
 .top, .bottom {position:fixed; width:100%; z-index:1}.top{top:0} .bottom{bottom:0}
@@ -28,4 +30,7 @@ html{
 	background-color: grey;
 	padding: 0 0 0;
 	margin: 0 0 0;
+}
+.meow {
+	display: grid;
 }
