--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style = "background-color: grey;">
+<div style = "background-color: grey;" class = "meow">
     <div class = "head">
         <app-navbar></app-navbar>
     </div>
