--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,11 +1,15 @@
 nav {background-color:black;color:red; overflow: hidden; width: 100%; top: 0; margin:0; }
 h2 {color:green;}
-.head {color:red; text-decoration:none; overflow:hidden; display:inline-block; width:auto; text-align: center;}
+.head {color:red; text-decoration:none; overflow:hidden; display:inline-block; width:auto; text-align: center; grid-area: home;}
 h1 {color:red; text-align:left;}
 .tabs:hover {background-color:grey}
 body {color:white; text-align:left;}
 .bod {margin:32px; padding:8px 16px}
-.navbar {background-color:black;color:red; margin: 0; overflow: hidden; width: 100%; top: 0; position: fixed; left: 0;}
+.navbar {background-color:black;color:red; margin: 0; overflow: hidden; width: 100%; top: 0; position: fixed; left: 0;
+	display: grid;
+	grid-template-areas: 
+	'home nav';
+}
 .top, .bottom {position:fixed; width:100%; z-index:1}.top{top:0} .bottom{bottom:0}
 .right {float:right!important}
 .black {background-color:black}
@@ -30,4 +34,7 @@ body {color:white; text-align:left;}
   body {
     padding:0;
     margin:0;
+}
+.nav {
+	grid-area: nav;
 }
