--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class = "navbar">
     <a routerLink="/home" class = "head" style = "font-size: 45px;"><strong>Noah Gaston</strong></a>
-    <div class = "head" style = "float: right;">
+    <div class = "head nav" style = "float: right;">
         <a routerLink="/about-me" class = "tabs">About Me</a>
         <a routerLink="/experience" class = "tabs">Experience</a>
         <a routerLink="/links" class = "tabs">Links</a>
