--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,14 @@
 nav {background-color:black;color:red; overflow: hidden; width: 100%; top: 0}
 h2 {color:green;}
-.head {color:red; position:fixed; overflow:hidden; display:inline-block; width:auto; z-index: 51;
-	grid-row: 0;}
+.meow {
+	display: grid;
+	grid-template-areas: 
+	'header'
+	'body';
+	gap: 10px;
+}
+.head {color:red; overflow:hidden; display:inline-block; width:auto;
+	grid-area: header; height: 110px;}
 .head .tabs {padding:8px 16px; float:right!important; width:auto; border:none; 
 	display:block; outline:0; color:red; white-space:nowrap}
 h1 {color:red; text-align:left;}
@@ -14,10 +21,10 @@ body {background-color:grey; text-align:left;
 }
 .bod {
 	left: 0;
-	position: relative;
+	margin-left: 15px;
+	padding-top: 110px;
 	background-color: grey;
-	z-index: 5;
-	grid-row: 1;
+	grid-area: body;
 }
 .navbar {background-color:black;color:red; margin: 0; overflow: hidden; width: 100%; top: 0}
 .top, .bottom {position:fixed; width:100%; z-index:1}.top{top:0} .bottom{bottom:0}
@@ -30,7 +37,4 @@ html{
 	background-color: grey;
 	padding: 0 0 0;
 	margin: 0 0 0;
-}
-.meow {
-	display: grid;
 }
