--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,10 @@
     <div class = "head">
         <app-navbar></app-navbar>
     </div>
-    <div class = "bod" style = "background-color: grey; margin-left: 15px;">
-        <div style = "margin-top: 110px;">
-            <router-outlet></router-outlet>
-        </div>
+    <div class = "bod">
+        <router-outlet></router-outlet>
     </div>
+    <p>a</p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    margin-top: 110px
 </div>
