--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,6 +20,8 @@ body {background-color:grey; text-align:left;
 }
 .bod {
 	left: 0;
+	position: relative;
+	height: 100%;
 	margin-left: 15px;
 	background-color: grey;
 	grid-area: body;
