--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style = "background-color: grey;" class = "meow">
     <div class = "head">
-        <app-navbar #nav></app-navbar>
+        <app-navbar></app-navbar>
     </div>
     <div class = "bod">
         <router-outlet></router-outlet>
