--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,8 +6,8 @@ h2 {color:green;}
 	'header'
 	'body';
 }
-.head {color:red; overflow:hidden; display:block; width:auto;
-	grid-area: header; height: auto; min-height: 110px;}
+.head {color:red; overflow:hidden; display:block; width:auto; top: 0;
+	grid-area: header; height: auto; min-height: 110px; position: sticky;}
 .head .tabs {padding:8px 16px; float:right!important; width:auto; border:none; 
 	display:block; outline:0; color:red; white-space:nowrap}
 h1 {color:red; text-align:left;}
