--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -28,7 +28,7 @@
         </div>
         <div class="entryleft" id="email">
             <label for="email"><strong>Email: </strong></label>
-            <div style="text-align: center; margin: auto;">nrgman&#64;tds.net</div>
+            <div style="text-align: center; margin: auto;">haonowah&#64;gmail.com</div>
         </div>
         <div class="entry" id="Discord">
             <label for="address"><strong>Discord: </strong></label>
